--- a/src/style.css
+++ b/src/style.css
@@ -22,23 +22,39 @@
   }
 }
 
-.phw-unknown {
+.phw-unknown::after {
+  content: '?';
+  position: absolute;
+  left: 4px;
+  bottom: 4px;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 18px;
+  height: 18px;
+  padding-bottom: 1px;
+  color: #ffffff;
+  background-color: #00000055;
+  font-size: 0.875rem;
+  font-weight: 700;
+  border-radius: 50%;
+}
+
+.phw-highlighted {
+  img {
+    border-radius: 8px;
+  }
+
   &::after {
-    content: '?';
+    content: '';
     position: absolute;
-    left: 4px;
-    bottom: 4px;
+    inset: 0;
     pointer-events: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 18px;
-    height: 18px;
-    padding-bottom: 1px;
-    color: #ffffff;
-    background-color: #00000055;
-    font-size: 0.875rem;
-    font-weight: 700;
-    border-radius: 50%;
+    display: block;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0 0 0 2px #ffff66, inset 0 0 0 4px #1a1a1a;
+    border-radius: 8px;
   }
 }
