--- a/src/options.css
+++ b/src/options.css
@@ -1,9 +1,76 @@
-#form {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
+*,
+::before,
+::after {
+  box-sizing: border-box;
+}
 
-  #submit {
-    grid-column: 1 / span 2;
+body {
+  display: flex;
+  justify-content: center;
+  padding: 0;
+  font-family: sans-serif;
+  color: #ffffff;
+  background-color: #23222b;
+
+  h1 {
+    font-size: 1.25rem;
+    margin: 0;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+    min-height: 2rem;
+    font-size: 0.9375rem;
+    opacity: 0.625;
+  }
+
+  input[type='text'],
+  textarea {
+    min-height: 2rem;
+    padding: 0.5rem;
+    font-size: 0.875rem;
+    color: #ffffff;
+    background-color: #32303c;
+    border: none;
+    border-radius: 0.5rem;
+  }
+
+  textarea {
+    height: 10rem;
+    resize: vertical;
+  }
+
+  button {
+    height: 2.5rem;
+    color: #ffffff;
+    background-color: #0096fa;
+    border: none;
+    border-radius: 0.5rem;
+    transition: background-color 0.2s ease-in-out;
+
+    &:hover {
+      background-color: #0489ef;
+    }
+  }
+
+  #main {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    width: 100%;
+    max-width: 45rem;
+    padding: 1rem;
+
+    #form {
+      display: grid;
+      grid-template-columns: 1fr 2fr;
+      align-items: start;
+      gap: 1rem;
+
+      #submit {
+        grid-column: 1 / span 2;
+      }
+    }
   }
 }
